test/zinc_source/compile_errors/concurrency/02_select_receive_non_channel.zn
// expected-error: select receive expects a channel expression

fn main() {
    value = 1

    select {
        case msg = <-value {
            print("{msg}")
        }
    }
}
